expected/main/lc/illegal-data-lhs2.err
ERROR: "actual/main/lc/illegal-data-lhs2.llc", line 3
  data T X   = A | B
         ^
Syntax error in type parameter

ERROR: Aborting after previously reported error

